kanc/src/tests/sample_code/should_succeed/single_file/no_warnings/nullary_variant_with_call_return_type.k
type Unit {
    .c: Unit,
}

type Foo(T: Type) {
    .Bar: Foo(Unit),
}

let unit = match Foo.Bar {
    .Bar => Unit.c,
};
